--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,10 @@
 <html>
     <body>
         <form action="{% url 'postdata' %}" method="post">
-            {% csrf_token %}
-             {{ form }}
-    <input type="submit" value="Submit" />
+            
+       		<input id = "id_jsondata" name="jsondata" type="jsondata" required autocomplete="off"/>
+    <button type="submit" value="Submit" />
+    {% csrf_token %}
         </form>
     </body>
 </html>
