--- a/app/templates/battery.html
+++ b/app/templates/battery.html
@@ -443,15 +443,11 @@
 
      <script type="text/javascript">
   $(function () {
-    var dict = []; // create an empty array
-for (i = 0; i < {{allbatterylevel}}.length; i++) {
-dict.push({
-    key:   "time",
-    value: "value"
-});
     var timestamp_data = [
-    {% for batterylevel in allbatterylevel %}
-    {"value":}
+  {"time": 1349046000000, "value": 100},
+  {"time": 1313103600000, "value": 43},
+  {"time": 1299110400000, "value": 23},
+  {"time": 1281222000000, "value": 65},
 ];
 Morris.Line({
   element: 'battery_level',
