--- a/app/templates/cpu.html
+++ b/app/templates/cpu.html
@@ -73,9 +73,9 @@
                   
                   <li><a><i class="fa fa-desktop"></i> About <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="project_details.html">Project Details</a></li>
-                      <li><a href="report.html">Report</a></li>
-                      <li><a href="contacts.html">Our Team</a></li>
+                      <li><a href="../../about">Project Details</a></li>
+                      <li><a href="../../about/report">Report</a></li>
+                      <li><a href="../../about/contacts">Our Team</a></li>
                       
                     </ul>
                   </li>
