--- a/app/templates/project_details.html
+++ b/app/templates/project_details.html
@@ -8,20 +8,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Android Hackers</title>
-
-   <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+{% load staticfiles %}
+<!-- Bootstrap -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="../css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{% static 'css/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
     <!-- NProgress -->
-    <link href="../css/nprogress.css" rel="stylesheet">
+    <link href="{% static 'css/nprogress.css' %}" rel="stylesheet">
+    
+  
+    <!-- bootstrap-progressbar -->
+    <link href="{% static 'css/bootstrap-progressbar-3.3.4.min.css' %}" rel="stylesheet">
+    
+
+    <!-- Custom Theme Style -->
+    <link href="{% static 'css/custom.min.css' %}" rel="stylesheet">
+
+
+
 
      <!-- iCheck -->
-    <link href="../css/green.css" rel="stylesheet">
+    <link href=".{% static 'css/green.css' %}" rel="stylesheet">
 
-    
-    <!-- Custom styling plus plugins -->
-    <link href="../css/custom.min.css" rel="stylesheet">
   </head>
 
   <body class="nav-md">
@@ -46,17 +54,17 @@
                 <ul class="nav side-menu">
                   <li><a><i class="fa fa-home"></i> Statistics <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="battery.html">Battery</a></li>
-                      <li><a href="cpu.html">CPU and RAM</a></li>
-                      <li><a href="remote_testing.html">Run Tests</a></li>
+                      <li><a href="../dashboard">Battery</a></li>
+                      <li><a href="../dashboard/cpu">CPU and RAM</a></li>
+                      <li><a href="../dashboard/test">Run Tests</a></li>
                     </ul>
                   </li>
                   
                   <li><a><i class="fa fa-desktop"></i> About <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="project_details.html">Project Details</a></li>
-                      <li><a href="report.html">Report</a></li>
-                      <li><a href="contacts.html">Our Team</a></li>
+                      <li><a href="../about">Project Details</a></li>
+                      <li><a href="report">Report</a></li>
+                      <li><a href="contacts">Our Team</a></li>
                       
                     </ul>
                   </li>
@@ -183,20 +191,22 @@
       </div>
     </div>
 
-     <!-- jQuery -->
-    <script src="../js/jquery.min.js"></script>
+
+<!-- jQuery -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <!-- Bootstrap -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- FastClick -->
-    <script src="../js/fastclick.js"></script>
+    <script src="{% static 'js/fastclick.js' %}"></script>
     <!-- NProgress -->
-    <script src="../js/nprogress.js"></script>
+    <script src="{% static 'js/nprogress.js' %}"></script>
+
+    <!-- Custom Theme Scripts -->
+    <script src="{% static 'js/custom.min.js' %}"></script>
+
 
     <!-- iCheck -->
-    <script src="../js/icheck.min.js"></script>
+    <script src="{% static 'js/icheck.min.js' %}"></script>
 
-   
-    <!-- Custom Theme Scripts -->
-    <script src="../js/custom.min.js"></script>
   </body>
 </html>
