--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -123,7 +123,7 @@
                               </ul>
                             </div>
                             <div class="right col-xs-5 text-center">
-                              <img src="{% static 'images/head_pic.jpg'  %}" alt="" class="img-circle img-responsive">
+                              <img src="{% static 'images/allison.jpg' %}" alt="" class="img-circle img-responsive">
                             </div>
                            
                           </div>
