--- a/app/templates/battery.html
+++ b/app/templates/battery.html
@@ -136,7 +136,7 @@
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
               <span class="count_top"><i class="fa fa-archive"></i> Total Free RAM</span>
-              <div class="count">{{lastram}}GB</div>
+              <div class="count">{{lastram}}MB</div>
             </div>
           </div>
           <!-- ============== TOP BAR WITH BATTERY HEALTH, STATUS, LEVEL, TEMP, ETC... -->
