--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -35,7 +35,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="battery.html" class="site_title"><i class="fa fa-android"></i> <span>Android Debug</span></a>
+              <a href="../../dashboard" class="site_title"><i class="fa fa-android"></i> <span>Android Debug</span></a>
             </div>
 
             <div class="clearfix"></div>
