--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -58,7 +58,7 @@
                     <ul class="nav child_menu">
                       <li><a href="..">Project Details</a></li>
                       <li><a href="../report">Report</a></li>
-                      <li><a href="../test">Our Team</a></li>
+                      <li><a href="../contacts">Our Team</a></li>
                       
                     </ul>
                   </li>
