get test edited for pending tests

--- a/app/templates/battery.html
+++ b/app/templates/battery.html
@@ -479,7 +479,7 @@ Morris.Line({
 Morris.Line({
   element: 'temperature',
   data: timestamp_data,
-  xkey: 'period',
+  xkey: 'time',
   ykeys: ['value'],
   yLabelFormat: function(value) {
                   return value + 'C'; 
