Edited gettestinfo for not pending case

--- a/app/templates/cpu.html
+++ b/app/templates/cpu.html
@@ -184,11 +184,12 @@
                           <div class="clearfix"></div>
                         </div>
                         <ul class="list-unstyled top_profiles scroll-view">
+
                           <li class="media event">
                             
                             <div class="media-body">
-                              <a class="title" href="#">system_server</a>
-                              <p><strong>24%</strong> </p>
+                              <a class="title" href="#">{{cpuhog1.name}}}</a>
+                              <p><strong>{{cpuhog1.value}}</strong> </p>
                               
                             </div>
                           </li>
