Edited totalram on cpu.html

--- a/app/templates/cpu.html
+++ b/app/templates/cpu.html
@@ -332,7 +332,7 @@
                         </tr>
                         <tr>
                           <th scope="row">Total RAM</th>
-                          <td>{{lsatramtotal}}</td>
+                          <td>{{lastramtotal}}</td>
                           <td> - </th>
                           
                         </tr>
