Added percent sign to html hog

--- a/app/templates/cpu.html
+++ b/app/templates/cpu.html
@@ -189,7 +189,7 @@
                             
                             <div class="media-body">
                               <a class="title" href="#">{{cpuhog1.name}}</a>
-                              <p><strong>{{cpuhog1.value}}</strong> </p>
+                              <p><strong>{{cpuhog1.value}}%</strong> </p>
                               
                             </div>
                           </li>
@@ -197,7 +197,7 @@
                            
                             <div class="media-body">
                               <a class="title" href="#">{{cpuhog2.name}}</a>
-                              <p><strong>{{cpuhog2.value}}</strong> </p>
+                              <p><strong>{{cpuhog2.value}}%</strong> </p>
                               
                             </div>
                           </li>
@@ -205,7 +205,7 @@
                             
                             <div class="media-body">
                               <a class="title" href="#">{{cpuhog3.name}}</a>
-                              <p><strong>{{cpuhog3.value}}</strong> </p>
+                              <p><strong>{{cpuhog3.value}}%</strong> </p>
                             </div>
                           </li>
 
@@ -213,7 +213,7 @@
                             
                             <div class="media-body">
                               <a class="title" href="#">{{cpuhog4.name}}</a>
-                              <p><strong>{{cpuhog4.value}}</strong> </p>
+                              <p><strong>{{cpuhog4.value}}%</strong> </p>
                               
                             </div>
                           </li>
