Added load view

--- a/app/templates/cpu.html
+++ b/app/templates/cpu.html
@@ -422,7 +422,7 @@ Morris.Line({
 <script type="text/javascript">
   $(function () {
     var day_data = [
-  {"period": "Timestamp", "1 min avg": 4.81, "5 min avg": 5.40, "15 min avg": 4.98}
+  {"period": "Timestamp", "1 min avg": {{lastload1}}, "5 min avg": {{lastload2}}, "15 min avg": {{lastload3}}}
   
 ];
 Morris.Bar({
