Added forgotten percent sign

--- a/app/templates/cpu.html
+++ b/app/templates/cpu.html
@@ -221,7 +221,7 @@
                             
                             <div class="media-body">
                               <a class="title" href="#">{{cpuhog5.name}}</a>
-                              <p><strong>{{cpuhog5.value}}</strong> </p>
+                              <p><strong>{{cpuhog5.value}}%</strong> </p>
                               
                             </div>
                           </li>
