--- a/app/templates/remote_testing.html
+++ b/app/templates/remote_testing.html
@@ -139,14 +139,14 @@
                     <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle btn-md" type="button" aria-expanded="false">Run Tests <span class="caret"></span>
                     </button>
                     <ul role="menu" class="dropdown-menu">
-                      <li><a href="runbattery">1. Low Battery</a>
+                      <li><a href="runbattery">1. Upload Battery Test</a>
                       </li>
-                      <li><a href="runbatterystatus">2. Battery Status</a>
-                      </li>
-                      <li><a href="runbluetooth">3. Bluetooth</a>
+                      <!-- <li><a href="runbatterystatus">2. Battery Status</a>
+                      </li> -->
+                      <li><a href="runbluetooth">2. Bluetooth</a>
                       </li>
                       <li></li>
-                      <li><a href="runspeed">4. Speed</a>
+                      <li><a href="runspeed">3. Speed</a>
                       </li>
                     </ul>
                     </div> </li>
