Edited project details

--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -110,7 +110,7 @@
               <!-- HERE -->
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>New Partner Contracts Consultancy</h2>
+                    <h2>Android Hackers - Software Testing Project</h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
