Added Asad description to contacts

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -180,7 +180,7 @@
                             <h4 class="brief"><i></i></h4>
                             <div class="left col-xs-7">
                               <h2>Asad Malik</h2>
-                              <p><strong>Contributions: </strong> Android Developer   </p>
+                              <p><strong>Contributions: </strong> Android Developer / Script Writer </p>
                               <ul class="list-unstyled">
                                 
                               </ul>
