--- a/app/templates/battery.html
+++ b/app/templates/battery.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Android Hackers</title>
+    <title>Android Hackers - Battery</title>
     {% load staticfiles %}
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
