--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Android Hackers</title>
+    <title>Android Hackers - Team</title>
 {% load staticfiles %}
 <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
