--- a/app/templates/remote_testing.html
+++ b/app/templates/remote_testing.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Android Hackers</title>
+    <title>Android Hackers - Remote Testing</title>
 
      {% load staticfiles %}
     <!-- Bootstrap -->
