Changed point size on chart

--- a/app/templates/cpu.html
+++ b/app/templates/cpu.html
@@ -403,7 +403,8 @@ Morris.Line({
   yLabelFormat: function(value) {
                   return value + '%'; 
                 },
-  labels: ['battery value'],
+  labels: ['cpu total'],
+  pointSize: 2,
   dateFormat: function (x) { return new Date(x).toDateString(); }
 });
 });
