Found the typo in html code

--- a/app/templates/remote_testing.html
+++ b/app/templates/remote_testing.html
@@ -95,7 +95,7 @@
           </div>
         </div>
 
-        <<!-- top navigation -->
+        <!-- top navigation -->
         <div class="top_nav">
           <div class="nav_menu">
             <nav>
