--- a/app/templates/project_details.html
+++ b/app/templates/project_details.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Android Hackers - Project Details</title>
+    <title>Android Hackers - Project</title>
 {% load staticfiles %}
 <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -179,6 +179,9 @@
           </div>
         </div>
         <!-- /page content -->
+</div>
+</div>
+</div>
 
         <!-- footer content -->
         <footer>
